<resources>
    <string name="app_name">Login</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_register">Not a member?, Sign up now</string>
    <string name="action_register_short">Register</string>
    <string name="action_forgot_password">Forgot your password?</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_new_user">NewUserActivity</string>
    <string name="prompt_first_name">First name</string>
    <string name="prompt_last_name">Last name</string>
    <string name="prompt_mobile_phone">Mobile phone</string>
    <string name="prompt_credit_card">Credit card</string>
    <string name="title_activity_maps">Map</string>
</resources>
